--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@supabase/ssr": "^0.7.0",
+    "@tosspayments/payment-widget-sdk": "^0.12.1",
+    "@tosspayments/tosspayments-sdk": "^2.4.1",
     "cross-env": "^10.0.0",
     "framer-motion": "^12.23.12",
     "next": "15.4.4",
