--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.18",
-    "swiper": "^12.0.2"
+    "swiper": "^12.0.2",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
