--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tosspayments/payment-widget-sdk": "^0.12.1",
     "@tosspayments/tosspayments-sdk": "^2.4.1",
     "cross-env": "^10.0.0",
+    "djwt": "^2.0.0",
     "framer-motion": "^12.23.12",
     "next": "15.4.4",
     "react": "19.1.0",
